# DistributedEventFactory

./: .gitignore  Dockerfile  README.md  install-requirements.sh  main.py  proposed.yml  pyproject.toml  requirements.txt  run-load-backend.sh  scalability-test.py  simulator.yml  use-case.yml
behavior_modifier/: modifier_list.py  naive_outlier_integration.py  outlier_autoencoder.py  outlier_statistic.py
config/: assembly_line.yml  example_use_case_assembly_line.yml  linear-test.yml  maturity-test.yml  new.yml  proposed.yml  simulator.yml  warehouse.yml
core/: datasource.py  datasource_id.py  event.py  sensor.py  sensor_id.py  util.py
distributed_event_factory/: event_factory.py  event_factory_main.py  main.py
docs/: README.md
k8s/: build.sh  flink.jsonnet  load.jsonnet  main.jsonnet
main/: main.py  simulation_generator.py
network/: cluster.py  event_sender.py  markov_chain_node_data_processor.py  network_protocol_factory.py  network_protocols.py  node.py  node_data_processor.py  process_simulator.py  producer.py  simulation.py  websocket_node_data_processor.py
playground/: grpc_client.py  grpc_server.py  test.py
provider/: provider_registry.py
sensors/: sensor_collection.py  sensors.py
server/: producer.py
simulation/: distributed_event_factory.py  event_loop_registry.py  process_simulator.py  simulation.py
test/: integration_test.py
tests/: complex_markov_chain.py  distributed_cluster_network_test.py  duration_test.py  markov_chain_test.py  network_protocol_factory_test.py  outlier_test.py  random_tests.py  run_in_console.bat  (+2 more)
utils/: types.py  (+4 more)
(+275 files in other folders)
