[project]
name = "distributed-event-factory"
version = "0.2.0"
authors = [
  { name="Hendrik Reiter", email="hendrik.reiter@email.uni-kiel.de" },
]
description = "A tool for generating distributed event logs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cau-se/DistributedEventFactory"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
